--- a/shop.html
+++ b/shop.html
@@ -157,7 +157,7 @@
 						<a class="product-item" href="#">
 							<img src="images/product-1.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<strong class="product-price">₹5000</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -171,7 +171,7 @@
 						<a class="product-item" href="#">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<strong class="product-price">₹7800</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -185,7 +185,7 @@
 						<a class="product-item" href="#">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<strong class="product-price">₹4300</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
