--- a/checkout.html
+++ b/checkout.html
@@ -93,8 +93,8 @@
 		              <label for="c_country" class="text-black">Country <span class="text-danger">*</span></label>
 		              <select id="c_country" class="form-control">
 		                <option value="1">Select a country</option>    
-		                <option value="2">bangladesh</option>    
-		                <option value="3">Algeria</option>    
+		                <option value="2">India</option>    
+		                <option value="3">Bangladesh</option>    
 		                <option value="4">Afghanistan</option>    
 		                <option value="5">Ghana</option>    
 		                <option value="6">Albania</option>    
@@ -177,8 +177,8 @@
 		                    <label for="c_diff_country" class="text-black">Country <span class="text-danger">*</span></label>
 		                    <select id="c_diff_country" class="form-control">
 		                      <option value="1">Select a country</option>    
-		                      <option value="2">bangladesh</option>    
-		                      <option value="3">Algeria</option>    
+		                      <option value="2">India</option>    
+		                      <option value="3">Bangladesh</option>    
 		                      <option value="4">Afghanistan</option>    
 		                      <option value="5">Ghana</option>    
 		                      <option value="6">Albania</option>    
@@ -283,15 +283,15 @@
 		                  <tbody>
 		                    <tr>
 		                      <td>Top Up T-Shirt <strong class="mx-2">x</strong> 1</td>
-		                      <td>$250.00</td>
+		                      <td>₹2500</td>
 		                    </tr>
 		                    <tr>
 		                      <td>Polo Shirt <strong class="mx-2">x</strong>   1</td>
-		                      <td>$100.00</td>
+		                      <td>₹1000</td>
 		                    </tr>
 		                    <tr>
 		                      <td class="text-black font-weight-bold"><strong>Cart Subtotal</strong></td>
-		                      <td class="text-black">$350.00</td>
+		                      <td class="text-black">₹3500</td>
 		                    </tr>
 		                    <tr>
 		                      <td class="text-black font-weight-bold"><strong>Order Total</strong></td>
