--- a/checkout.html
+++ b/checkout.html
@@ -295,7 +295,7 @@
 		                    </tr>
 		                    <tr>
 		                      <td class="text-black font-weight-bold"><strong>Order Total</strong></td>
-		                      <td class="text-black font-weight-bold"><strong>$350.00</strong></td>
+		                      <td class="text-black font-weight-bold"><strong>₹7000</strong></td>
 		                    </tr>
 		                  </tbody>
 		                </table>
