--- a/cart.html
+++ b/cart.html
@@ -1,16 +1,9 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 
   <meta name="description" content="" />
@@ -26,7 +19,7 @@
 
 	<body>
 
-		<!-- Start Header/Navigation -->
+	
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
@@ -56,9 +49,7 @@
 			</div>
 				
 		</nav>
-		<!-- End Header/Navigation -->
-
-		<!-- Start Hero Section -->
+		
 			<div class="hero">
 				<div class="container">
 					<div class="row justify-content-between">
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-		<!-- End Hero Section -->
+		
 
 		
 
-		<div class="untree_co-section before-footer-section">
+		<div class="co-section before-footer-section">
             <div class="container">
               <div class="row mb-5">
                 <form class="col-md-12" method="post">
@@ -208,7 +199,7 @@
           </div>
 		
 
-		<!-- Start Footer Section -->
+		
 		<footer class="footer-section">
 			<div class="container relative">
 
